#
# Makefile.am for NSTDIO
#

AM_CPPFLAGS = -I$(top_srcdir)/include

lib_LTLIBRARIES = libnstdio.la libppstream.la

#libnstdio_la_SOURCES = nstdio.c nstdio.h ppstream.h
libnstdio_la_SOURCES = nstdio.c 
libnstdio_la_LIBADD = -lpthread

#libppstream_la_SOURCES = ppstream.c ppstream.h
libppstream_la_SOURCES = ppstream.c
